- Fix theme switcher button alignment

--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -32,7 +32,7 @@
 
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
-            margin-right: 20px;
+            margin-right: 1.25rem;
         }
 
     }
