--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -58,7 +58,7 @@ html.theme--light {
   --accent-two:       #05d9e8;
   --accent-one-on-color: #091833;
   --accent-two-on-color: #091833;
-  --background:          hsl(30,90%,98%);
+  --background:          hsl(30,95%,98%);
   --border:              hsl(228, 11%, 93%);
   --background--light:   hsl(30,40%,94%);
   --background--dark:    hsl(228, 100%, 2%);
